--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,9 +5,7 @@ description = "Desktop chess application with AI engine and game analyzer"
 readme = "README.md"
 requires-python = ">=3.13"
 license = { text = "MIT" }
-dependencies = [
-    "PyQt6>=6.8",
-]
+dependencies = ["PyQt6>=6.8"]
 
 [project.scripts]
 chessy = "chessy.app:main"
@@ -24,7 +22,4 @@ testpaths = ["tests"]
 pythonpath = ["src"]
 
 [dependency-groups]
-dev = [
-    "pytest>=8.3",
-    "pytest-cov>=6.0",
-]
+dev = ["pytest>=8.3", "pytest-cov>=6.0"]
