--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [project]
-name = "chessy"
+name = "chessie"
 version = "0.1.0"
 description = "Desktop chess application with AI engine and game analyzer"
 readme = "README.md"
@@ -8,14 +8,14 @@ license = { text = "Apache-2.0" }
 dependencies = ["PyQt6>=6.8"]
 
 [project.scripts]
-chessy = "chessy.app:main"
+chessie = "chessie.app:main"
 
 [build-system]
 requires = ["hatchling"]
 build-backend = "hatchling.build"
 
 [tool.hatch.build.targets.wheel]
-packages = ["src/chessy"]
+packages = ["src/chessie"]
 
 [tool.pytest.ini_options]
 testpaths = ["tests"]
