chore: add ruff, mypy, and pre-commit tooling configuration
Adds comprehensive development tooling including:
- Ruff linter and formatter with Python 3.13 target
- Mypy static type checker with strict mode
- Pre-commit hooks configuration
- Updates .gitignore for C/C++ build artifacts
- Applies code style fixes via ruff format

--- a/.gitignore
+++ b/.gitignore
@@ -36,7 +36,7 @@ coverage.xml
 .ruff_cache/
 
 # IDEs
-.vscode/
+.vscode/*
 .idea/
 *.swp
 *.swo
@@ -53,3 +53,13 @@ coverage.xml
 # Build artifacts
 *.so
 *.dylib
+
+# C / C++ build artifacts
+*.o
+*.a
+*.out
+compile_commands.json
+CMakeFiles/
+CMakeCache.txt
+cmake_install.cmake
+_deps/
