--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -35,5 +35,6 @@ repos:
       - id: check-merge-conflict
       - id: check-added-large-files
         args: [--maxkb=500]
+        exclude: ^assets/fonts/AdwaitaSans-Regular\.ttf$
       - id: mixed-line-ending
         args: [--fix=lf]
