--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,9 @@ packages = ["src/chessie"]
 [tool.pytest.ini_options]
 testpaths = ["tests"]
 pythonpath = ["src"]
+markers = [
+  "slow: marks tests as slow (deselect with '-m \"not slow\"')",
+]
 
 [dependency-groups]
 dev = [
