--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -75,13 +75,19 @@ jobs:
             libxcb-xinerama0 \
             libxcb-xfixes0 \
             libxcb-shape0 \
+            libxcb-cursor0 \
             libgl1-mesa-dev \
+            libglib2.0-0 \
+            libdbus-1-3 \
+            libfontconfig1 \
             xvfb
 
       - name: Run tests (Linux)
         if: runner.os == 'Linux'
+        env:
+          QT_QPA_PLATFORM: xcb
         run: |
-          xvfb-run --auto-servernum uv run pytest --cov=src --cov-report=term-missing
+          xvfb-run --auto-servernum --server-args="-screen 0 1024x768x24" uv run pytest --cov=src --cov-report=term-missing
 
       - name: Run tests (macOS/Windows)
         if: runner.os != 'Linux'
