ci: add bandit security linter to CI and pre-commit hooks

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,6 +28,9 @@ jobs:
       - name: Mypy check
         run: uv run mypy src
 
+      - name: Bandit check
+        run: uv run bandit -c pyproject.toml -r src
+
   build:
     runs-on: ubuntu-latest
     steps:
