--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,16 +20,15 @@ packages = ["src/chessie"]
 [tool.pytest.ini_options]
 testpaths = ["tests"]
 pythonpath = ["src"]
-markers = [
-  "slow: marks tests as slow (deselect with '-m \"not slow\"')",
-]
+markers = ["slow: marks tests as slow (deselect with '-m \"not slow\"')"]
 
 [dependency-groups]
 dev = [
   "pytest>=8.3",
   "pytest-cov>=6.0",
-  "ruff>=0.9",
+  "ruff>=0.15.4",
   "mypy>=1.14",
+  "bandit>=1.8",
   "pre-commit>=4.0",
 ]
 
@@ -77,3 +76,14 @@ ignore_missing_imports = true # Qt stubs aren't always available
 [[tool.mypy.overrides]]
 module = "tests.*"
 disallow_untyped_defs = false
+
+# ---------------------------------------------------------------------------
+# Bandit – security linter
+# ---------------------------------------------------------------------------
+[tool.bandit]
+targets = ["src"]
+exclude_dirs = ["tests"]
+skips = [
+  "B101", # assert statements are fine in tests
+  "B105", # false positives on PGN result tokens like "1-0"
+]
