--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -37,6 +37,6 @@ repos:
       - id: check-merge-conflict
       - id: check-added-large-files
         args: [--maxkb=500]
-        exclude: ^assets/fonts/AdwaitaSans-Regular\.ttf$
+        exclude: ^assets/
       - id: mixed-line-ending
         args: [--fix=lf]
