refactor: centralize asset path resolution and app bootstrapping
Create a centralized runtime_assets module to handle asset path resolution
across the application, and extract application initialization logic into a
separate bootstrap module. Update resources.py and sounds.py to use the new
asset_path function, and configure pyproject.toml to include assets in wheel
distributions.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,9 @@ build-backend = "hatchling.build"
 [tool.hatch.build.targets.wheel]
 packages = ["src/chessie"]
 
+[tool.hatch.build.targets.wheel.force-include]
+"assets" = "chessie/assets"
+
 [tool.pytest.ini_options]
 testpaths = ["tests"]
 pythonpath = ["src"]
