--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,14 +11,15 @@ dependencies = ["PyQt6>=6.8"]
 chessie = "chessie.app:main"
 
 [build-system]
-requires = ["hatchling"]
-build-backend = "hatchling.build"
+requires = ["scikit-build-core>=0.10", "pybind11>=2.13"]
+build-backend = "scikit_build_core.build"
 
-[tool.hatch.build.targets.wheel]
-packages = ["src/chessie"]
-
-[tool.hatch.build.targets.wheel.force-include]
-"assets" = "chessie/assets"
+[tool.scikit-build]
+cmake.source-dir = "engine_cpp"
+cmake.build-type = "Release"
+cmake.args = ["-DBUILD_PYBIND=ON", "-DBUILD_TESTS=OFF"]
+wheel.packages = ["src/chessie"]
+install.components = ["python"]
 
 [tool.pytest.ini_options]
 testpaths = ["tests"]
