build: add MSVC support and conditional compiler flags
Add cross-platform compiler flag support to CMakeLists, including MSVC-specific settings (/W4 /WX) and conditional AddressSanitizer configuration. Also update CI workflow to specify working-directory for build step.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -53,6 +53,7 @@ jobs:
 
       - name: Build
         run: cmake --build --preset ci
+        working-directory: engine_cpp
 
       - name: Test
         run: ctest --preset ci
