--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -42,7 +42,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [ubuntu-latest, macos-latest]
+        os: [ubuntu-latest, macos-latest, windows-latest]
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -51,12 +51,24 @@ jobs:
         run: cmake --preset ci
         working-directory: engine_cpp
 
-      - name: Build
+      - name: Build (Linux/macOS)
+        if: runner.os != 'Windows'
         run: cmake --build --preset ci
         working-directory: engine_cpp
 
-      - name: Test
+      - name: Build (Windows)
+        if: runner.os == 'Windows'
+        run: cmake --build --preset ci --config Debug
+        working-directory: engine_cpp
+
+      - name: Test (Linux/macOS)
+        if: runner.os != 'Windows'
         run: ctest --preset ci
+        working-directory: engine_cpp
+
+      - name: Test (Windows)
+        if: runner.os == 'Windows'
+        run: ctest --preset ci -C Debug
         working-directory: engine_cpp
 
   build:
